sms component ok

--- a/src/app/configuration/components/clubs-admin-page/clubs-admin-page.component.scss
+++ b/src/app/configuration/components/clubs-admin-page/clubs-admin-page.component.scss
@@ -1,93 +1,1 @@
-/* Styles pour le conteneur principal */
-@import "variables";
-.container {
-  padding: 20px;
-}
-
-/* Styles pour les cartes */
-.card {
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-  background-color: $primary; // Utilisation de la couleur principale
-color: white; // Texte en blanc pour contraster avec le fond
-font-weight: bold;
-  padding: 1rem;
-}
-
-.card-body {
-  padding: 1.5rem;
-}
-
-/* Styles pour les boutons */
-.btn {
-  font-size: 0.9rem;
-  transition: background-color 0.3s ease, color 0.3s ease;
-
-  &.btn-outline-success {
-    border-color: $primary; // Utilisation de la couleur principale
-  color: $primary; // Texte de la couleur principale
-
-  &:hover {
-    background-color: $primary; // Fond de la couleur principale au survol
-  color: white; // Texte en blanc au survol
-  }
-  }
-
-  &.btn-outline-danger {
-    border-color: $danger; // Utilisation de la couleur de danger
-  color: $danger; // Texte de la couleur de danger
-
-  &:hover {
-    background-color: $danger; // Fond de la couleur de danger au survol
-  color: white; // Texte en blanc au survol
-  }
-  }
-
-  &.btn-outline-warning {
-    border-color: $warning; // Utilisation de la couleur d'avertissement
-  color: $warning; // Texte de la couleur d'avertissement
-
-  &:hover {
-    background-color: $warning; // Fond de la couleur d'avertissement au survol
-  color: white; // Texte en blanc au survol
-  }
-  }
-}
-
-/* Styles pour le tableau */
-table {
-  width: 100%;
-  font-size: 0.9rem;
-  border-collapse: collapse;
-
-  thead {
-    background-color: $primary; // Utilisation de la couleur principale
-  color: white; // Texte en blanc pour contraster avec le fond
-  }
-
-  th, td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-  }
-
-  tbody tr:hover {
-    background-color: rgba($primary, 0.1); // Effet de survol léger
-  }
-}
-
-/* Responsive design */
-@media (max-width: 768px) {
-  .btn {
-    width: 100%;
-    margin-bottom: 0.5rem;
-  }
-
-  td .btn {
-    width: auto;
-  }
-}
+@import "/app/configuration/components/bourse-admin-page";
