--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,11 +1,8 @@
 <div class="app-container">
   <div class="main-content">
-    <!-- Barre latérale -->
-    <app-aside-bare></app-aside-bare>
-
-    <!-- Contenu principal avec le routeur -->
+    <app-aside-bare/>
     <div class="content">
-      <router-outlet></router-outlet>
+      <router-outlet/>
     </div>
   </div>
 </div>
