--- a/src/app/notification/components/send-sms/send-sms.component.html
+++ b/src/app/notification/components/send-sms/send-sms.component.html
@@ -1,83 +1,93 @@
 <div [style]="{'display': modalIsOpened() ? 'block' : 'none'}" class="modal fade show">
   <div class="modal-content">
-    <!-- Header -->
     <div class="modal-header">
       <h5 class="modal-title">Envoyer un SMS</h5>
       <button type="button" class="btn-close" (click)="close()"></button>
     </div>
 
-    <!-- Body -->
     <div class="modal-body">
-      <form (ngSubmit)="sendSms()">
+      <form>
         <div class="row">
-          <!-- Colonne de gauche -->
           <div class="col-md-6">
-            <!-- Sélection de la liste des destinataires -->
             <div class="mb-3">
               <label class="form-label">Liste des destinataires</label>
-              <!-- Champ de recherche pour les destinataires -->
               <input type="text" class="form-control mb-3" placeholder="Rechercher une liste..."
-                      name="recipientSearch">
+                     name="recipientSearch" [(ngModel)]="recipientSearchTerm">
               <div class="d-flex flex-wrap gap-2">
-                <button *ngFor="let list of filteredRecipientLists.slice(0, showMoreRecipients() ? filteredRecipientLists.length : 3)"
-                        class="btn"
-                        [ngClass]="{'btn-primary': selectedList === list, 'btn-outline-secondary': selectedList !== list}"
-                        (click)="selectList(list)">
+                <button
+                  *ngFor="let list of filteredRecipientLists.slice(0, showMoreRecipients() ? filteredRecipientLists.length : 3)"
+                  class="btn"
+                  [ngClass]="{'btn-primary': selectedList === list, 'btn-outline-secondary': selectedList !== list}"
+                  (click)="selectList(list)">
                   {{ list }}
                 </button>
-                <button class="btn btn-outline-primary" (click)="toggleShowMoreRecipients()">
+                <button *ngIf="filteredRecipientLists.length > 3" class="btn btn-outline-primary"
+                        (click)="toggleShowMoreRecipients()">
                   {{ showMoreRecipients() ? 'Voir moins' : 'Voir plus' }}
                 </button>
               </div>
             </div>
 
-            <!-- Sélection du modèle de message -->
             <div class="mb-3">
               <label class="form-label">Modèle de message</label>
-              <!-- Champ de recherche pour les modèles de messages -->
               <input type="text" class="form-control mb-3" placeholder="Rechercher un modèle..."
-                     name="templateSearch">
+                     name="templateSearch" [(ngModel)]="templateSearchTerm">
               <div class="d-flex flex-wrap gap-3">
-                <div *ngFor="let template of filteredMessageTemplates.slice(0, showMoreTemplates() ? filteredMessageTemplates.length : 3)"
-                     class="card"
-                     [ngClass]="{'border-primary': selectedTemplate === template, 'border-light': selectedTemplate !== template}"
-                     (click)="selectTemplate(template)">
-                  <p class="m-0">{{ template.name }}</p>
+                <div
+                  *ngFor="let template of filteredMessageTemplates.slice(0, showMoreTemplates() ? filteredMessageTemplates.length : 3)"
+                  class="card"
+                  [ngClass]="{'border-primary': smsTemplateState?.selectedTemplate === template, 'border-light': smsTemplateState.selectedTemplate !== template}"
+                  (click)="selectTemplateAndFillMessage(template)"
+                  appContextMenuTrigger [appContextMenuTriggerData]="template"
+                  (contextMenuTrigger)="onTemplateContextMenu($event)"><p class="m-0">{{ template.modelName }}</p>
                 </div>
-                <button class="btn btn-outline-primary" (click)="toggleShowMoreTemplates()">
+                <button *ngIf="filteredMessageTemplates.length > 3" class="btn btn-outline-primary"
+                        (click)="toggleShowMoreTemplates()">
                   {{ showMoreTemplates() ? 'Voir moins' : 'Voir plus' }}
+                </button>
+                <button class="btn btn-outline-success" (click)="addTemplate()">
+                  Ajouter un modèle
                 </button>
               </div>
             </div>
           </div>
 
-          <!-- Colonne de droite -->
           <div class="col-md-6">
-            <!-- Destinataire spécifique -->
             <div class="mb-3">
               <label for="recipient" class="form-label">Destinataire spécifique (optionnel)</label>
-              <input type="text" class="form-control" id="recipient" [(ngModel)]="sms.recipient" name="recipient"
+              <input type="text" class="form-control" id="recipient" name="recipient"
                      placeholder="Entrez un numéro">
             </div>
 
-            <!-- Message -->
             <div class="mb-3">
               <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" [(ngModel)]="sms.message" name="message" rows="8"
+              <textarea [(ngModel)]="sms.message" class="form-control" id="message" name="message" rows="8"
                         required></textarea>
             </div>
           </div>
         </div>
 
-        <!-- Footer -->
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" (click)="close()">Annuler</button>
           <button type="submit" class="btn btn-primary">Envoyer</button>
         </div>
       </form>
     </div>
+    <p>pppp{{sms| json}}</p>
+
   </div>
 </div>
 
-<!-- Arrière-plan flouté -->
 <div class="modal-backdrop fade show" *ngIf="modalIsOpened()"></div>
+<app-sms-model-option-dialog
+  #optionDialogComponentRef
+  [x]="contextMenuX()"
+  [y]="contextMenuY()"
+  (onOpenAddModel)="addTemplate()"
+  (closed)="closeContextMenu()">
+
+</app-sms-model-option-dialog>
+<app-popup-add-template-sms
+  (onCloseAddModel)="selectTemplateAndFillMessage(smsTemplateState.selectedTemplate)"
+  (onReloadModels)="loadMessageTemplates()"
+/>
